# non_euclidean_engine

./: CMakeLists.txt  main.cpp
glad/: glad.c
internal/pkg/: lib_includes.h
internal/pkg/app/: app.h
internal/pkg/buffer/: attribLayout.h  indexBuffer.cpp  indexBuffer.h  vertexAttribBuffer.cpp  vertexAttribBuffer.h  vertexBuffer.cpp  vertexBuffer.h
internal/pkg/camera/: camera.h
internal/pkg/core/: consts.h  geometry.h
internal/pkg/entity/: builder.h  cube.cpp  cube.h  entity.h  horosphere.h  prism.h  sphere.cpp  sphere.h  tree.h
internal/pkg/input/: input.h
internal/pkg/render/: renderContext.h
internal/pkg/scene/: scene.h
internal/pkg/shader/: noneuclid.vs  shader.fs  shader.h  shader.vs  shader1.vs  tmp.vs
internal/pkg/texture/: Texture.cpp  Texture.h
